--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -296,14 +296,72 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>customersLabel</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14646</th>\n",
+       "      <td>280206.02</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18102</th>\n",
+       "      <td>259657.30</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17450</th>\n",
+       "      <td>194550.79</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16446</th>\n",
+       "      <td>168472.50</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14911</th>\n",
+       "      <td>143825.06</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "CustomerID\n",
-       "14646    280206.02\n",
-       "18102    259657.30\n",
-       "17450    194550.79\n",
-       "16446    168472.50\n",
-       "14911    143825.06\n",
-       "Name: amount_spent, dtype: float64"
+       "            amount_spent  customersLabel\n",
+       "CustomerID                              \n",
+       "14646          280206.02               2\n",
+       "18102          259657.30               2\n",
+       "17450          194550.79               2\n",
+       "16446          168472.50               2\n",
+       "14911          143825.06               2"
       ]
      },
      "metadata": {},
@@ -319,7 +377,7 @@
     "customers[\"customersLabel\"] = customers[\"amount_spent\"].apply(lambda x: 2 if x > best_customers.quantile(.95)\\\n",
     "                                                              else 1 if x > best_customers.quantile(.75) else 0)\n",
     "\n",
-    "display(best_customers.head())"
+    "display(customers.head())"
    ]
   },
   {
@@ -429,7 +487,7 @@
     "display(country_df.shape)\n",
     "display(country_df[country_df[\"CustomerID\"]==12455])\n",
     "\n",
-    "# Hay países con más de un país"
+    "# Hay customers con más de un país, por eso ahora nuestra matriz es mayor"
    ]
   },
   {
