--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -1373,47 +1373,132 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>#</th>\n",
        "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
        "      <th>A/D Ratio</th>\n",
+       "      <th>Combo Type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>429</th>\n",
+       "      <td>386</td>\n",
        "      <td>DeoxysAttack Forme</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>600</td>\n",
+       "      <td>50</td>\n",
+       "      <td>180</td>\n",
+       "      <td>20</td>\n",
+       "      <td>180</td>\n",
+       "      <td>20</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
        "      <td>9.000</td>\n",
+       "      <td>Psychic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>347</th>\n",
+       "      <td>318</td>\n",
        "      <td>Carvanha</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>305</td>\n",
+       "      <td>45</td>\n",
+       "      <td>90</td>\n",
+       "      <td>20</td>\n",
+       "      <td>65</td>\n",
+       "      <td>20</td>\n",
+       "      <td>65</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
        "      <td>4.500</td>\n",
+       "      <td>Water - Dark</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
+       "      <td>15</td>\n",
        "      <td>Mega Beedrill</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>495</td>\n",
+       "      <td>65</td>\n",
+       "      <td>150</td>\n",
+       "      <td>40</td>\n",
+       "      <td>15</td>\n",
+       "      <td>80</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "      <td>3.750</td>\n",
+       "      <td>Bug - Poison</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>453</th>\n",
+       "      <td>408</td>\n",
        "      <td>Cranidos</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>350</td>\n",
+       "      <td>67</td>\n",
+       "      <td>125</td>\n",
+       "      <td>40</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>58</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
        "      <td>3.125</td>\n",
+       "      <td>Rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>348</th>\n",
+       "      <td>319</td>\n",
        "      <td>Sharpedo</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>460</td>\n",
+       "      <td>70</td>\n",
+       "      <td>120</td>\n",
+       "      <td>40</td>\n",
+       "      <td>95</td>\n",
+       "      <td>40</td>\n",
+       "      <td>95</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
        "      <td>3.000</td>\n",
+       "      <td>Water - Dark</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Name  A/D Ratio\n",
-       "429  DeoxysAttack Forme      9.000\n",
-       "347            Carvanha      4.500\n",
-       "19        Mega Beedrill      3.750\n",
-       "453            Cranidos      3.125\n",
-       "348            Sharpedo      3.000"
+       "       #                Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "429  386  DeoxysAttack Forme  Psychic     NaN    600  50     180       20   \n",
+       "347  318            Carvanha    Water    Dark    305  45      90       20   \n",
+       "19    15       Mega Beedrill      Bug  Poison    495  65     150       40   \n",
+       "453  408            Cranidos     Rock     NaN    350  67     125       40   \n",
+       "348  319            Sharpedo    Water    Dark    460  70     120       40   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio    Combo Type  \n",
+       "429      180       20    150           3       True      9.000       Psychic  \n",
+       "347       65       20     65           3      False      4.500  Water - Dark  \n",
+       "19        15       80    145           1      False      3.750  Bug - Poison  \n",
+       "453       30       30     58           4      False      3.125          Rock  \n",
+       "348       95       40     95           3      False      3.000  Water - Dark  "
       ]
      },
      "execution_count": 10,
@@ -1424,7 +1509,9 @@
    "source": [
     "ratio = pokemon.sort_values(by='A/D Ratio', ascending=False)\n",
     "pokemon_maximo_2 = ratio[['Name','A/D Ratio']]\n",
-    "pokemon_maximo_2.head()"
+    "pokemon_maximo_2.head()\n",
+    "\n",
+    "ratio.head()"
    ]
   },
   {
@@ -1438,14 +1525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Dragon - Fairy', 'Dark - Fire', 'Fire - Steel', 'Psychic - Fire', 'Fire - Fighting']\n"
+      "['Psychic', 'Rock', 'Bug - Poison', 'Water - Dark']\n"
      ]
     },
     {
@@ -1518,21 +1605,20 @@
        "348            Sharpedo      3.000  Water - Dark"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
     "\n",
-    "x = list(set(ratio['Combo Type']))\n",
+    "pokemon_maximo_3 = ratio[['Name', 'A/D Ratio', 'Combo Type']]\n",
+    "variable = pokemon_maximo_3.head()\n",
+    "x = list(set(variable['Combo Type']))\n",
     "print(x[0:5])\n",
     "\n",
-    "#No sé muy bien qué había que hacer porque dice que se agregue Combo Type a lo que hemos imprimido antes.\n",
-    "#Esta es lo que pensaba que había que poner también (me hace un dataset de lo que tenía antes pero añadiendo Combo Type)\n",
-    "pokemon_maximo_3 = ratio[['Name', 'A/D Ratio', 'Combo Type']]\n",
-    "x = pokemon_maximo_3.head()\n",
-    "display(x)\n"
+    "pokemon_maximo_3.head()\n"
    ]
   },
   {
@@ -1548,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1601,89 +1687,89 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Psychic - Dark</th>\n",
-       "      <td>720.000000</td>\n",
-       "      <td>680.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>170.000000</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.666667</td>\n",
+       "      <th>Psychic</th>\n",
+       "      <td>381.973684</td>\n",
+       "      <td>464.552632</td>\n",
+       "      <td>72.552632</td>\n",
+       "      <td>64.947368</td>\n",
+       "      <td>67.236842</td>\n",
+       "      <td>98.552632</td>\n",
+       "      <td>82.394737</td>\n",
+       "      <td>78.868421</td>\n",
+       "      <td>3.342105</td>\n",
+       "      <td>0.236842</td>\n",
+       "      <td>1.164196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rock</th>\n",
+       "      <td>410.111111</td>\n",
+       "      <td>409.444444</td>\n",
+       "      <td>67.111111</td>\n",
+       "      <td>103.333333</td>\n",
+       "      <td>107.222222</td>\n",
+       "      <td>40.555556</td>\n",
+       "      <td>58.333333</td>\n",
+       "      <td>32.888889</td>\n",
+       "      <td>3.888889</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>1.260091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug - Poison</th>\n",
+       "      <td>199.166667</td>\n",
+       "      <td>347.916667</td>\n",
+       "      <td>53.750000</td>\n",
+       "      <td>68.333333</td>\n",
+       "      <td>58.083333</td>\n",
+       "      <td>42.500000</td>\n",
+       "      <td>59.333333</td>\n",
+       "      <td>65.916667</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.315989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Water - Dark</th>\n",
        "      <td>347.666667</td>\n",
        "      <td>493.833333</td>\n",
        "      <td>69.166667</td>\n",
-       "      <td>120.0</td>\n",
+       "      <td>120.000000</td>\n",
        "      <td>65.166667</td>\n",
        "      <td>88.833333</td>\n",
-       "      <td>63.5</td>\n",
+       "      <td>63.500000</td>\n",
        "      <td>87.166667</td>\n",
        "      <td>3.166667</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>2.291949</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ground - Steel</th>\n",
-       "      <td>530.000000</td>\n",
-       "      <td>508.000000</td>\n",
-       "      <td>110.000000</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bug - Ghost</th>\n",
-       "      <td>292.000000</td>\n",
-       "      <td>236.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         #       Total          HP  Attack    Defense  \\\n",
-       "Combo Type                                                              \n",
-       "Psychic - Dark  720.000000  680.000000   80.000000   160.0  60.000000   \n",
-       "Water - Dark    347.666667  493.833333   69.166667   120.0  65.166667   \n",
-       "Ground - Steel  530.000000  508.000000  110.000000   135.0  60.000000   \n",
-       "Bug - Ghost     292.000000  236.000000    1.000000    90.0  45.000000   \n",
+       "                       #       Total         HP      Attack     Defense  \\\n",
+       "Combo Type                                                                \n",
+       "Psychic       381.973684  464.552632  72.552632   64.947368   67.236842   \n",
+       "Rock          410.111111  409.444444  67.111111  103.333333  107.222222   \n",
+       "Bug - Poison  199.166667  347.916667  53.750000   68.333333   58.083333   \n",
+       "Water - Dark  347.666667  493.833333  69.166667  120.000000   65.166667   \n",
        "\n",
-       "                   Sp. Atk  Sp. Def      Speed  Generation  Legendary  \\\n",
-       "Combo Type                                                              \n",
-       "Psychic - Dark  170.000000    130.0  80.000000    6.000000        1.0   \n",
-       "Water - Dark     88.833333     63.5  87.166667    3.166667        0.0   \n",
-       "Ground - Steel   50.000000     65.0  88.000000    5.000000        0.0   \n",
-       "Bug - Ghost      30.000000     30.0  40.000000    3.000000        0.0   \n",
+       "                Sp. Atk    Sp. Def      Speed  Generation  Legendary  \\\n",
+       "Combo Type                                                             \n",
+       "Psychic       98.552632  82.394737  78.868421    3.342105   0.236842   \n",
+       "Rock          40.555556  58.333333  32.888889    3.888889   0.111111   \n",
+       "Bug - Poison  42.500000  59.333333  65.916667    2.333333   0.000000   \n",
+       "Water - Dark  88.833333  63.500000  87.166667    3.166667   0.000000   \n",
        "\n",
-       "                A/D Ratio  \n",
-       "Combo Type                 \n",
-       "Psychic - Dark   2.666667  \n",
-       "Water - Dark     2.291949  \n",
-       "Ground - Steel   2.250000  \n",
-       "Bug - Ghost      2.000000  "
+       "              A/D Ratio  \n",
+       "Combo Type               \n",
+       "Psychic        1.164196  \n",
+       "Rock           1.260091  \n",
+       "Bug - Poison   1.315989  \n",
+       "Water - Dark   2.291949  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,10 +1777,10 @@
    "source": [
     "# your code here\n",
     "\n",
-    "#No sé cómo terminar este ejercicio \n",
-    "\n",
-    "final_comboType = ratio.groupby('Combo Type').agg('mean').sort_values(by='A/D Ratio', ascending=False)\n",
-    "final_comboType.head(4)\n"
+    "final_comboType = pokemon.groupby('Combo Type').agg('mean')\n",
+    "final_comboType2 = final_comboType.transpose()\n",
+    "tabla = final_comboType2[x].transpose()\n",
+    "tabla.head()\n"
    ]
   }
  ],
